implement reCAPTCHA for registration

--- a/backend/templates/base.html
+++ b/backend/templates/base.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700" rel="stylesheet">
     <link rel="icon" type="image/png" href="../static/favicon.ico" />
     <!-- <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> -->
+    <script src="https://www.google.com/recaptcha/api.js?onload=vueRecaptchaApiLoaded&render=explicit" async defer></script>
     <style>
         body {
             background: #4D7090;
